--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
   </header>
   <section class="body-section">
     <section class="main-section">
-      <div class="container todo-container">
+      <div id="input-todo" class="container todo-container">
         <div class="input-container">
-          <input class="input-heading" type="text" placeholder="Task Heading" />
-          <textarea class="input-task" name="todo-task" rows="5" cols="80" placeholder="Brief description of task here..."></textarea>
-          <input class="input-author" type="text" placeholder="Author" />
-          <button type="button" class="input-button">Enter To-Do</button>
+          <input id="new-heading" class="input-heading" type="text" placeholder="Task Heading" />
+          <textarea id="new-task" class="input-task" name="todo-task" rows="5" cols="80" placeholder="Brief description of task here..."></textarea>
+          <input id="new-author" class="input-author" type="text" placeholder="Author" />
+          <button id="click-todo" type="button" class="input-button">Enter To-Do</button>
         </div>
-        <ul class="collection my-collection todo-collection">
+        <ul id="todo-list" class="collection my-collection todo-collection">
           <li class="collection-item">
             <div class="card blue-grey darken-1" draggable="true">
               <div class="card-content white-text">
@@ -61,5 +61,24 @@
       </div>
     </section>
   </section>
+
+  <script id="childTemplate" type="text/template">
+    <!--<li class="collection-item">-->
+      <div class="card blue-grey darken-1" draggable="true">
+        <div class="card-content white-text">
+          <span class="card-title"><%= heading%></span>
+          <p><%= content%></p>
+        </div>
+        <div class="card-action">
+          <span class="task-author"><%= author%></span>
+        </div>
+      </div>
+    <!--</li>-->
+  </script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.3.3/underscore-min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.2/backbone-min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone-localstorage.js/1.0/backbone.localStorage-min.js"> </script>
+  <script src="script.js"></script>
 </body>
 </html>
