--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <button id="click-todo" type="button" class="input-button">Enter To-Do</button>
         </div>
         <ul id="todo-list" class="collection my-collection todo-collection">
-          <li class="collection-item">
+          <!--<li class="collection-item">
             <div class="card blue-grey darken-1" draggable="true">
               <div class="card-content white-text">
                 <span class="card-title">Task 1</span>
@@ -30,7 +30,7 @@
                 <span class="task-author">John Doe</span>
               </div>
             </div>
-          </li>
+          </li>-->
         </ul>
       </div>
       <div class="container" >
