--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
       <div class="card blue-grey darken-1" draggable="true">
         <div class="card-content white-text">
           <span class="card-title"><%= heading%></span>
+          <div class="close-button">
+            <i class="fa fa-window-close" aria-hidden="true"></i>
+          </div>
           <p><%= content%></p>
         </div>
         <div class="card-action">
