Drag to review list added.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </ul>
       </div>
       <div class="container">
-        <ul class="collection my-collection review-collection">
+        <ul id="review-collection" class="collection my-collection review-collection" ondrop="onDrop(event)" ondragover="onDragOver(event)">
           <li class="collection-header"><h4>In Review</h4></li>
           <li class="add-to-icon">
             <i class="fa fa-plus-square" aria-hidden="true"></i>
