Done list drag added.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </section>
     <section class="main-section main-section-2">
       <div class="done-container">
-        <ul class="collection my-collection done-collection">
+        <ul id="done-collection" class="collection my-collection done-collection" ondrop="onDrop(event)" ondragover="onDragOver(event)">
           <li class="collection-header"><h4>Done</h4></li>
           <li class="add-to-icon">
             <i class="fa fa-plus-square" aria-hidden="true"></i>
