--- a/index.html
+++ b/index.html
@@ -12,25 +12,16 @@
   </header>
   <section id="main-container" class="body-section">
     <section class="main-section">
-      <div id="input-todo" class="container todo-container">
-        <div class="input-container">
-          <input id="new-heading" class="input-heading" type="text" placeholder="Task Heading" />
-          <textarea id="new-task" class="input-task" name="todo-task" rows="5" cols="80" placeholder="Brief description of task here..."></textarea>
-          <input id="new-author" class="input-author" type="text" placeholder="Author" />
-          <button id="click-todo" type="button" class="input-button">Enter To-Do</button>
-        </div>
-        <ul id="todo-list" class="collection my-collection todo-collection">
-          <!--<li class="collection-item">
-            <div class="card blue-grey darken-1" draggable="true">
-              <div class="card-content white-text">
-                <span class="card-title">Task 1</span>
-                <p>To do something like everything.</p>
-              </div>
-              <div class="card-action">
-                <span class="task-author">John Doe</span>
-              </div>
+      <div class="container">
+        <ul id="todo-collection" class="collection my-collection todo-collection" ondrop="onDrop(event)" ondragover="onDragOver(event)">
+          <li class="collection-header">
+            <div class="input-container">
+              <input id="new-heading" class="input-heading" type="text" placeholder="Task Heading" />
+              <textarea id="new-task" class="input-task" name="todo-task" rows="5" cols="80" placeholder="Brief description of task here..."></textarea>
+              <input id="new-author" class="input-author" type="text" placeholder="Author" />
+              <button id="click-todo" type="button" class="input-button">Enter To-Do</button>
             </div>
-          </li>-->
+          </li>
         </ul>
       </div>
       <div class="container" >
