--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
               <input id="new-heading" class="input-heading" type="text" placeholder="Task Heading" />
               <textarea id="new-task" class="input-task" name="todo-task" rows="5" cols="80" placeholder="Brief description of task here..."></textarea>
               <input id="new-author" class="input-author" type="text" placeholder="Author" />
-              <button id="click-todo" type="button" class="input-button">Enter To-Do</button>
+              <button id="click-todo" type="button" class="input-button">Add To-Do or press &lt;Enter&gt;</Enter></button>
             </div>
           </li>
         </ul>
