Status shown in cards.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
           <p><%= content%></p>
         </div>
         <div class="card-action">
-          <span class="task-author"><%= author%></span>
+          <div class="task-status">Status: <%= status%></div>
+          <div class="task-author">Author: <%= author%></div>
         </div>
       </div>
     <!--</li>-->
